unpackaged/main/default/objects/Error_Log_Settings__c/Error_Log_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls error logging behavior: enable/disable logging, email notifications, retention, verbosity, and user-facing error messages.</description>
    <label>Error Log Settings</label>
</CustomObject>