unpackaged/main/default/objects/Error_Log_Settings__c/fields/Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients__c</fullName>
    <description>Comma-separated list of email addresses to receive error notifications.</description>
    <inlineHelpText>Enter comma-separated email addresses for error notifications.</inlineHelpText>
    <label>Email Recipients</label>
    <type>TextArea</type>
</CustomField>