unpackaged/main/default/objects/Error_Log_Settings__c/fields/Enable_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, sends email notifications to configured recipients when ERROR severity logs are created.</description>
    <inlineHelpText>Check to enable email notifications on errors.</inlineHelpText>
    <label>Enable Email Notifications</label>
    <type>Checkbox</type>
</CustomField>