unpackaged/main/default/objects/Error_Log_Settings__c/fields/Enable_Error_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Error_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master on/off switch for error logging. When unchecked, no error log events are published.</description>
    <inlineHelpText>Uncheck to disable all error logging.</inlineHelpText>
    <label>Enable Error Logging</label>
    <type>Checkbox</type>
</CustomField>