unpackaged/main/default/objects/Error_Log_Settings__c/fields/Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Retention_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days to retain error log records before the retention batch deletes them.</description>
    <inlineHelpText>Error logs older than this many days are deleted by the retention batch job.</inlineHelpText>
    <label>Log Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>