unpackaged/main/default/objects/Error_Log_Settings__c/fields/User_Facing_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Facing_Error_Message__c</fullName>
    <description>Standard user-friendly error message for display on screen flow error screens. Consultants reference this in fault-path screens for a consistent end-user experience.</description>
    <inlineHelpText>Enter a user-friendly error message to display on screen flow error screens.</inlineHelpText>
    <label>User Facing Error Message</label>
    <type>TextArea</type>
</CustomField>