unpackaged/main/default/objects/Error_Log_Settings__c/fields/Verbosity_Level__c.field-meta.xml
<CustomField>
    <fullName>Verbosity_Level__c</fullName>
    <defaultValue>&quot;DEBUG&quot;</defaultValue>
    <description>Controls which severity levels are logged. ERROR = only errors. WARNING = warnings and errors. INFO = info, warnings, and errors. DEBUG = everything.</description>
    <inlineHelpText>Valid values: ERROR, WARNING, INFO, DEBUG. Controls which severity levels are logged. ERROR = only errors. WARNING = warnings and errors. INFO = info, warnings, and errors. DEBUG = everything.</inlineHelpText>
    <label>Verbosity Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>